{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 127,
  "lineage": "3d4ec20d-6a2e-1411-00f2-2d17ab8c2bb8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default_private_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-23T07:07:36.467-08:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/remove-it-482111/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.128.0.0/20",
            "ipv6_cidr_range": "2600:2d00:400e:296:0:0:0:0/64",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/networks/default",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "remove-it-482111",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-central1/subnetworks/default",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.datadog-integration",
      "mode": "data",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/remove-it-482111/global/networks/default",
            "name": "default",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-southeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west10/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-north2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/africa-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/northamerica-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/asia-northeast3/subnetworks/default"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.datadog-integration",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "dataflow_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.128.0.1",
            "id": "projects/remove-it-482111/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/networks/default",
            "private_ip_google_access": true,
            "project": "remove-it-482111",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-central1/subnetworks/default"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.datadog-integration",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_dataflow_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "12345-12346"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-08T00:28:52.549-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.128.0.0/20"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remove-it-482111/global/firewalls/egress-rule-dataflow-workers",
            "log_config": [],
            "name": "egress-rule-dataflow-workers",
            "network": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/networks/default",
            "priority": 210,
            "project": "remove-it-482111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/firewalls/egress-rule-dataflow-workers",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "dataflow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.datadog-integration.data.google_compute_network.vpc",
            "module.datadog-integration.data.google_compute_subnetwork.dataflow_subnetwork",
            "module.datadog-integration.google_project_service.enable_apis",
            "module.datadog-integration.time_sleep.wait_for_apis"
          ]
        }
      ]
    },
    {
      "module": "module.datadog-integration",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_rule_dataflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "12345-12346"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-08T00:28:52.107-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/remove-it-482111/global/firewalls/ingress-rule-dataflow-workers",
            "log_config": [],
            "name": "ingress-rule-dataflow-workers",
            "network": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/networks/default",
            "priority": 200,
            "project": "remove-it-482111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/firewalls/ingress-rule-dataflow-workers",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "dataflow"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "dataflow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.datadog-integration.data.google_compute_network.vpc",
            "module.datadog-integration.google_project_service.enable_apis",
            "module.datadog-integration.time_sleep.wait_for_apis"
          ]
        }
      ]
    },
    {
      "module": "module.datadog-integration",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "dataflow_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-08T00:28:52.651-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/remove-it-482111/regions/us-central1/routers/dataflow-router",
            "name": "dataflow-router",
            "network": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/global/networks/default",
            "project": "remove-it-482111",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/remove-it-482111/regions/us-central1/routers/dataflow-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.datadog-integration.data.google_compute_network.vpc",
            "module.datadog-integration.google_project_service.enable_apis",
            "module.datadog-integration.time_sleep.wait_for_apis"
          ]
        }
      ]
    },
    {
      "module": "module.datadog-integration",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "remove-it-482111/us-central1/dataflow-router/dataflow-machines-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "dataflow-machines-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "remove-it-482111",
            "region": "us-central1",
            "router": "dataflow-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.datadog-integration.data.google_compute_network.vpc",
            "module.datadog-integration.google_compute_router.dataflow_router",
            "module.datadog-integration.google_project_service.enable_apis",
            "module.datadog-integration.time_sleep.wait_for_apis"
          ]
        }
      ]
    }
  ]
}